--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="content">
         <div>
-                <img src="Image/My Portfolio1.png" alt="Sanjo" >
+                <img src="Images/My Portfolio1.png" alt="Sanjo" >
         </div>
       
     </div>
