--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     const codeInput = document.getElementById('verificationCodeInput');
 
     // Replace with your desired verification code
-    const correctCode = "12345"; 
+    const correctCode = "QsaNjo@3885"; 
     const fileUrl = "https://drive.google.com/file/d/14TCTPIOY28ZA953ts1lAormEk39XsfRn/view?usp=drive_link"; // Replace with the actual file URL
 
     // When the user clicks the button, open the modal
