--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <li>Data Migration (DMF)</li>
                             <li>Managment Reporter</li>
                             <li>Power Bi Report Development</li>
-                            <li>Electronic reporter</li>
+                            <li>Electronic reporting</li>
                             <li>LCS Environment Management</li>
                             <li>Integration Concepts</li>
                         </ul>
