--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
                              <a href="https://www.linkedin.com/pulse/d365-fogeneral-ledgercoafinancial-tags-sanjo-poly-meujf/?trackingId=bOmu94vVRfasoS3erOgzyA%3D%3D" class="text-link">Read More <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
+                    <div class="card blog-card">
+                        <img src="Financia tags.png" alt="Blog Post 3 Image">
+                        <div class="card-content">
+                            <h3>Automatic bank reconciliation(ABR) using ER and share point</h3>
+                            <p class="blog-date">June 2, 2025</p>
+                            <p>In addition to the description and financial dimensions, some users within the organization need to capture extra details like document numbers,
+                                 payment recipient names, vehicle numbers, and transaction references etc.. when posting journals or invoices....</p>
+                             <a href="BlogPost.html" class="text-link">Read More <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
                 </div>
                  <div class="view-all-container">
                      <a href="https://www.linkedin.com/in/sanjopoly/recent-activity/articles/" class="cta-button">View All Blogs</a>
