--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                      <div class="card blog-card">
-                        <img src="graph.jpg" alt="Blog Post 2 Image">
+                        <img src="Images\graph.jpg" alt="Blog Post 2 Image">
                          <div class="card-content">
                             <h3>Email Configuration in D365 F&O using Microsoft Graph</h3>
                             <p class="blog-date">September 11, 2024</p>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                      <div class="card blog-card">
-                        <img src="Financila tags.png" alt="Blog Post 3 Image">
+                        <img src="Images/Financila tags.png" alt="Blog Post 3 Image">
                         <div class="card-content">
                             <h3>Financial Tags</h3>
                             <p class="blog-date">July 1, 2024</p>
