--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h2>Microsoft D365 Finance and Operation <br>- Functional Consultant </h2>
                 
                     <p class="hero-about" id="about">
-                        a passionate consultant specializing in leveraging the Microsoft ecosystem – including Dynamics 365 ERP, Power Apps, Fabric, Azure, and Copilot – 
+                        a passionate consultant specializing in leveraging the Microsoft ecosystem – including Dynamics 365 ERP, Power BI, Excel – 
                         alongside robust SQL skills. 
                         My focus is on helping businesses optimize critical financial and operational processes, transforming technology into a powerful engine for growth
                     </p>
@@ -46,8 +46,8 @@
                     </div>
                     <a href="#contact" class="cta-button hero-button">Get In Touch</a>
                 </div>
-                <div class="hero-image-container">
-                    <img src="sanjo.png" alt="Sanjo Poly - Professional Photo" class="hero-image">
+                <div class="">
+                    <img src="Images/sanjo.png" alt="Sanjo Poly - Professional Photo" class="hero-image">
                      <div class="hero-bg-graphics"></div>
                 </div>
             </div>
@@ -328,3 +328,4 @@
     <script src="css/script.js"></script>
 </body>
 </html>
+
