--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <a href="#contact" class="cta-button hero-button">Get In Touch</a>
                 </div>
                 <div class="">
-                    <img src="Images/sanjo.png" alt="Sanjo Poly - Professional Photo" class="hero-image">
-                     <div class="hero-bg-graphics"></div>
+                    <img src="Images/sanjo.png" alt="Sanjo Poly - Professional Photo" >
+                     
                 </div>
             </div>
         </section>
@@ -328,4 +328,5 @@
     <script src="css/script.js"></script>
 </body>
 </html>
+
 
