--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="#contact" class="cta-button hero-button">Get In Touch</a>
                 </div>
                 <div class="">
-                    <img src="Images/sanjo.png" alt="Sanjo Poly - Professional Photo" >
+                    <img src="Images/sanjo.png" alt="Sanjo Poly - Professional Photo" style="width: 50%;" >
                      
                 </div>
             </div>
@@ -328,5 +328,6 @@
     <script src="css/script.js"></script>
 </body>
 </html>
+
 
 
