--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h2>Latest Blogs</h2>
                 <div class="blog-grid">
                     <div class="card blog-card">
-                        <img src="UAE VAT.png" alt="Blog Post 1 Image">
+                        <img src="Images/UAE VAT.png" alt="Blog Post 1 Image">
                         <div class="card-content">
                             <h3>UAE VAT Report Configuration In D365 F&O</h3>
                             <p class="blog-date">October 5, 2024</p>
@@ -328,6 +328,7 @@
     <script src="css/script.js"></script>
 </body>
 </html>
+
 
 
 
