Resume updated index.html

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
     // Replace with your desired verification code
     const correctCode = "QsaNjo@3885"; 
-    const fileUrl = "https://drive.google.com/file/d/14TCTPIOY28ZA953ts1lAormEk39XsfRn/view?usp=drive_link"; // Replace with the actual file URL
+    const fileUrl = "https://drive.google.com/file/d/12wcLPuP00C2NktxJ29zOvyJDy21oGrOx/view"; // Replace with the actual file URL
 
     // When the user clicks the button, open the modal
     downloadButton.onclick = function() {
@@ -328,6 +328,7 @@
     <script src="css/script.js"></script>
 </body>
 </html>
+
 
 
 
