--- a/BlogPost.html
+++ b/BlogPost.html
@@ -187,7 +187,7 @@
                         <p>Run PowerShell as administrator in the local system (any laptops)</p>
                         <div class="image-placeholder">Placeholder for Image: Running PowerShell as Administrator</div>
                         <p>Run below codes in PowerShell. Suggested to keep PowerShell latest version, here my version is v7.5.0</p>
-                        <div class="Images/runningPowershell.png">Placeholder for Image: PowerShell Commands for Graph Connection</div>
+                        <div class="image-placeholder"><img src="Images/runningPowershell1.png"></div>
                         <p>My test PowerShell command image</p>
                         
                         <p><strong>Install the Microsoft Graph</strong></p>
@@ -311,5 +311,6 @@ New-MgServicePrincipalAppRoleAssignedTo -ServicePrincipalId $erpServicePrincipal
 
 </body>
 </html>
+
 
 
